# MVP-CTAMP-ROBOT3

./: .gitignore  README.md  context.md  pyproject.toml
backends/adaptive/: __init__.py  event_log.py  hint_cache.py
backends/mujoco/: adaptive_hints.py  collision.py  ompl_backend.py  runtime.py  trace.py
cli/: common.py  generate_plan.py  run_simulation.py  run_simulation_v2.py  run_stacking_v2.py  run_stacking_v3.py
configs/scenes/: align_grouped_tidy_wall_world.yaml  stacking_wall_world_v2.yaml
configuration/: defaults.py  types.py
contexts/examples/: align_grouped_tidy_gang.md  align_grouped_tidy_wall_world.md  ungroup_obs_pyramid_cubes.md  ungroup_obs_stack_cubes.md
ctamp/: __init__.py
ctamp/api/: __init__.py  app.py  learning_manager.py  models.py  planning_manager.py
ctamp/benchmark/: __init__.py  cli.py  episode_runner.py  plots.py  problem_generator.py
ctamp/cli/: __init__.py  main.py
ctamp/cost/: __init__.py  edge_cost.py
ctamp/domain/: __init__.py  domain.py  (+4 more)
docs/: architecture.md  ctamp-v2-9obj-record.md  file-reference.md  performance-research.md  usage.md
execution/: motion_probe.py  primitives.py  recovery.py  runner.py  verifier.py
plugins/: align_task.py  common.py  pyramid_task.py  registry.py  stack_task.py
reports/: align_grouped_tidy_gang_verification.md
scene/: __init__.py  builder.py
task_planning/: candidate_generator.py  cost_model.py  generator.py  loader.py  types.py  validator.py
telemetry/: __init__.py  run_manifest.py  summary.py  visualize_llm_benchmarks.py
tests/: test_adaptive_heuristic.py  test_align_color_grouped_wall_p0_p1.py  test_align_color_grouped_wall_simulation.py  test_align_grouped_tidy_gang_integration.py  test_align_grouped_tidy_gang_scene.py  test_align_grouped_tidy_wall_world.py  test_experiment_naming.py  test_golden_regression.py  test_grouped_align_slot_allocator.py  test_grouped_align_validator.py  test_hint_cache.py  test_migrated_pipeline.py  test_plan_validator.py  test_pyramid_task.py  test_registry.py  test_robust_align.py  test_run_manifest.py  test_runtime_config.py  test_scene_manager.py  test_slot_allocator.py  test_stacking_v3.py  test_t2_t7_reliability.py  test_verifier.py  test_world_builder.py
world/: __init__.py  builder.py  slot_allocator.py  state.py
(+63 files in other folders)
