[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctamp-robot"
version = "0.2.0"
description = "Extensible CTAMP tabletop task planning and MuJoCo execution framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "fastapi>=0.100.0",
  "matplotlib>=3.7",
  "mujoco>=2.3.3",
  "networkx>=3.0",
  "numpy>=2.0,<3",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
viz = ["matplotlib>=3.8"]

[project.scripts]
ctamp-generate-plan = "cli.generate_plan:cli"
ctamp-run = "cli.run_simulation:cli"
ctamp-run-v2 = "cli.run_simulation_v2:cli"
ctamp-run-stacking-v2 = "cli.run_stacking_v2:cli"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "cli*",
  "world*",
  "ctamp*",
]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not simulation'"
pythonpath = ["."]
markers = [
  "simulation: headless MuJoCo, Pinocchio, and OMPL integration tests",
]
